# meshviewer

./: .gitignore  .gitmodules  3dshape.cpp  BunchOfObjects.stl  CMakeLists.txt  Camera.cpp  Camera.h  CameraFactory.cpp  CameraFactory.h  License.txt  Mesh.cpp  Mesh.h  MeshViewerObject.cpp  MeshViewerObject.h  Octree.cpp  Octree.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  README.md  STLReader.cpp  STLReader.h  ShaderLoader.cpp  ShaderLoader.h  TODO  Types.h  Util.h  VectorAlternative.h  Viewer.cpp  Viewer.h  build.sh  embuild.sh  emscripten.cmake  gl101.cpp  gl102  gl102.cpp  macOS.cmake  main.cpp  monkey.ply  (+6 more)
.github/workflows/: ci.yml  cicd.yml  cmake-single-platform.yml  emscripten_build.yml  macOS_CI.yml
cmake/: dependencies.cmake  emscripten.cmake  macOS.cmake  ubuntu.cmake
common/: CMakeLists.txt  Environment.cpp  Environment.h  MeshViewerObject.cpp  MeshViewerObject.h  ObjectRegistry.h  OpenGLCall.h  PointerTypes.h  Renderable.cpp  Renderable.h  Texture.h  TransformMatrix.h  Types.h  Util.h  stb_image.h
common/tests/: CMakeLists.txt  object_registry_test.cpp  object_test.cpp  pointer_types_test.cpp
common/testsupport/: Mock3DDrawable.h  MockCamera.h  MockDrawable.h  MockMesh.h  MockMeshFactory.h  MockReader.h  MockReaderFactory.h  MockRendererable.h  MockUserInterface.h  MockViewer.h  TestSupport.cmake  createTestRunner.sh
config/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  ConfigurationReader.cpp  ConfigurationReader.h  default.cfg  defaults.cfg
config/tests/: CMakeLists.txt  config_reader_test.cpp  configuration_reader_test.cpp
docker/: Dockerfile  Dockerfile.CICD  Dockerfile.github  docker-compose.yml
events/: BasicEventCallback.h  CMakeLists.txt  Callback.h  CallbackBase.h  CallbackFactory.h  CallbackFactory_Old.h  CallbackManager.cpp  CallbackManager.h  Callback_Old.h  Callbacks.h  DataEventCallback.h  Event.h  EventHandler.cpp  EventHandler.h  EventTypes.h  MemberFunctionCallback.h  NonMemberFunctionCallback.h
events/tests/: CMakeLists.txt  basic_event_callback_test.cpp  callback_factory_test.cpp  callbacks_manager_test.cpp  callbacks_test.cpp  data_event_callback_test.cpp  event_handler_test.cpp  event_test.cpp
mesh/: CMakeLists.txt  Face.cpp  Face.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshImpl.cpp  MeshImpl.h  Octree.cpp  Octree.h  Vertex.cpp  Vertex.h
mesh/tests/: CMakeLists.txt  face_test.cpp  mesh_test.cpp  octree_test.cpp  vertex_test.cpp
models/: CMakeLists.txt  ModelManager.cpp  ModelManager.h
models/samples/: Armadillo.ply  suzanne_subdivided.stl
models/tests/: CMakeLists.txt  model_manager_test.cpp
objects/: Arcball.cpp  Arcball.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraFactory.cpp  CameraFactory.h  Drawable.cpp  Drawable.h  Drawable3D.cpp  Drawable3D.h  Gadget.h  Glyph.cpp  Glyph.h  GradientBackground.cpp  GradientBackground.h  Renderable.cpp  Renderable.h  SketchPlane.cpp  SketchPlane.h
objects/arcball/: ArcballController.cpp  ArcballController.h  ArcballDirectionVector.cpp  ArcballDirectionVector.h  ArcballPoint.cpp  ArcballPoint.h  ArcballSphere.cpp  ArcballSphere.h  ArcballVector.cpp  ArcballVector.h  ArcballVisualizationItem.cpp  ArcballVisualizationItem.h
objects/tests/: CMakeLists.txt  camera_factory_test.cpp
readers/: CMakeLists.txt  PLYReader.cpp  PLYReader.h  Reader.h  ReaderFactory.cpp  ReaderFactory.h  STLReader.cpp  STLReader.h
readers/tests/: CMakeLists.txt  ply_reader_test.cpp  reader_factory_test.cpp  stl_reader_test.cpp  stlreader_test.cpp
scene/: CMakeLists.txt  Scene.cpp  Scene.h  Viewport.cpp  Viewport.h
scene/tests/: CMakeLists.txt  scene_test.cpp  viewport_test.cpp
shaders/: ArcballAxis.frag  ArcballAxis.vert  ArcballPoint.frag  ArcballPoint.vert  ArcballSphere.frag  ArcballSphere.vert  BackgroundVertex.glsl  CMakeLists.txt  EmscriptenShaderLoader.cpp  EmscriptenShaderLoader.h  Fragment.glsl  GlyphVertex.glsl  GlyphVertex.shader  MeshVertex.glsl  MeshVertex.shader  ShaderLoader.cpp  ShaderLoader.h  ShaderLoaderFactory.h  SketchPlaneFragment.glsl  SketchPlaneVertex.glsl  fragment.shader  vertex.shader
shaders/tests/: CMakeLists.txt  shaderloader_test.cpp
testfiles/: cube.ply  cylinder.stl  hemisphere.stl  tet.stl
tests/: CMakeLists.txt  camera_factory_test.cpp  cube_ascii.stl  mesh_test.cpp  octree_test.cpp  stlreader_test.cpp  viewer_test.cpp
ui/: CMakeLists.txt  ModelList.cpp  ModelList.h  Panel.cpp  Panel.h  UserInterface.cpp  UserInterface.h  UserInterfaceImpl.cpp  UserInterfaceImpl.h
ui/icons/: Camera_Button.blend  Colors_Button.blend  Help_Button.blend  Models_Button.blend  Settings_Button.blend
viewer/: CMakeLists.txt  Camera.cpp  Camera.h  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h  ViewerFactory.cpp  ViewerFactory.h  ViewerImpl.cpp  ViewerImpl.h  Viewport.cpp  Viewport.h
viewer/tests/: CMakeLists.txt  camera_factory_test.cpp  scene_test.cpp  viewer_test.cpp  viewport_test.cpp
web/: CMakeLists.txt  Deployment.md  artifacts.sh  shell.html
web/js/: emHelper.js
web/py/: artifacts.py  shaderToHtml.py  shaderToHtmlTest.py
web/response_headers/: package-lock.json  package.json  wrangler.toml
web/response_headers/src/: index.js
writers/: CMakeLists.txt  ObjWriter.cpp  ObjWriter.h
